fixing contrast issue on footer

--- a/src/app/components/af-website-link/af-website-link.component.less
+++ b/src/app/components/af-website-link/af-website-link.component.less
@@ -5,6 +5,7 @@ a {
   text-decoration: none;
   padding: 2px;
 }
-a:hover {
+a:hover,
+a:active {
   text-decoration: underline;
 }
