--- a/src/app/components/footer/footer.component.less
+++ b/src/app/components/footer/footer.component.less
@@ -5,7 +5,6 @@ footer {
   padding: 5px 0px 5px 0px;
   max-width: 100%;
   background-color: #ff0000;
-  font-size: 60%;
   font-weight: bold;
   text-align: center;
   color: #ffffff;
